# University

Semester2/DSA/A3.7/: App.cpp  CMakeLists.txt  ShortTest.cpp  SortedSet.cpp  SortedSet.h
Semester2/DSA/A4.35/: App.cpp  CMakeLists.txt  SMMIterator.cpp  SMMIterator.h  SortedMultiMap.cpp  SortedMultiMap.h
Semester2/DSA/A5.15/: App.cpp  CMakeLists.txt  ListIterator.cpp  ListIterator.h  SortedIndexedList.cpp  SortedIndexedList.h
Semester2/DSA/A5.15.2/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  ListIterator.cpp  ListIterator.h  ShortTest.cpp  SortedIndexedList.cpp  SortedIndexedList.h
Semester2/Graphs/A3/A3/: graph6_modif.txt  graphok.in  nwalks.in  service.py  ui.py
Semester2/Graphs/A3/BONUS/: service.py  ui.py
Semester2/Graphs/A4/A4/: graph10k_out.txt  try.py
Semester2/Graphs/A4/BONUSES/: main.py  not_dag.in  service.py  ui.py
Semester2/Graphs/A5/Presentation/: ConsoleUI.py
Semester2/OOP/A10/: main.cpp
Semester2/OOP/A10/CommandUndoRedo/: AddCommand.cpp  AddWatchlistCommand.cpp  ICommand.h  RemoveWatchlistCommand.h  UndoRedo.cpp  UpdateCommand.cpp  UpdateCommand.h
Semester2/OOP/A10/Domain/: Movie.h  MovieValidator.cpp
Semester2/OOP/A10/Exception/: UndoRedoException.cpp
Semester2/OOP/A10/GUI/: GUI.h  WatchListTableModel.h
Semester2/OOP/A10/Repository/: FileMovieRepo.cpp  FileMovieRepo.h  MovieRepository.cpp  MovieRepository.h  WatchListRepository.h
Semester2/OOP/A89/: AddCommand.cpp  AddCommand.h  AddWatchlistCommand.cpp  AddWatchlistCommand.h  AdminWidget.cpp  AdminWidget.h  CMakeLists.txt  ICommand.h  RemoveCommand.cpp  RemoveCommand.h  RemoveWatchlistCommand.cpp  RemoveWatchlistCommand.h  Service.cpp  Service.h  UndoRedo.h  UpdateCommand.cpp  UpdateCommand.h  UserWidget.cpp  main.cpp
Semester2/OOP/A910/: CMakeLists.txt  main.cpp
Semester2/OOP/A910/CommandUndoRedo/: AddCommand.h  AddWatchlistCommand.h  ICommand.h  RemoveCommand.cpp  RemoveCommand.h  RemoveWatchlistCommand.cpp  UndoRedo.h
Semester2/OOP/A910/Domain/: MovieValidator.h
Semester2/OOP/A910/Exception/: UndoRedoException.h
Semester2/OOP/A910/GUI/: GUI.cpp  GUI.h  WatchListTableModel.cpp
Semester2/OOP/A910/Repository/: CSVWatchListRepo.cpp  CSVWatchListRepo.h  HTMLWatchListRepo.h  MovieRepository.h  RepositoryValidator.cpp  RepositoryValidator.h  (+1 more)
Semester2/OOP/Seminar7B/: CMakeLists.txt  ChatSession.cpp  ChatSession.h  GUI.cpp  GUI.h  GUI.ui  Message.h  Observer.h  Subject.cpp  Subject.h  User.h  main.cpp  ui_GUI.h
Semester2/OOP/T3_Practice/Task/: CMakeLists.txt  domain.h  gui.cpp  gui.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h
Semester2/OOP/T3_Practice/Weather/: CMakeLists.txt  gui.cpp  gui.h  item.h  repository.cpp  service.cpp  service.h
Semester2/OOP/T3_Practice/shopping-list/: CMakeLists.txt  gui.h
Semester2/OS/lab13/: opt1  opt1.c  test1  test1.c  test2  test2.c
(+25 files in other folders)
