cmake_minimum_required(VERSION 3.28)
project(A5_15_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(A5_15_2
        App.cpp
        ExtendedTest.cpp
        ExtendedTest.h
        ListIterator.cpp
        ListIterator.h
        ShortTest.cpp
        ShortTest.h
        SortedIndexedList.cpp
        SortedIndexedList.h)
