cmake_minimum_required(VERSION 3.28)
project(A5_15)

set(CMAKE_CXX_STANDARD 17)

add_executable(A5_15
        ListIterator.cpp
        ListIterator.h
        ExtendedTest.cpp
        ExtendedTest.h
        App.cpp
        ShortTest.cpp
        ShortTest.h
        SortedIndexedList.h
        SortedIndexedList.cpp)
